--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -51,16 +51,12 @@
   </div>
 </div>
 
-<div data-controller="modal" style="width: 100vw; padding-top: 20px">
+<%# MAP ON HOMEPAGE %>
+<%# <div data-controller="modal" style="width: 100vw; padding-top: 20px">
   <div class="icon-link icon-modal w-25 m-auto text-center"  data-action="click->modal#show" data-modal-target="icon">
     <i class="fa-solid fa-location-dot"></i>
-  </div>
-
+  </div> %>
   <%# <div class="d-none" data-modal-target="map"> %>
-
-  <%= render "map" %>
-
-
+  <%# <%= render "map" %>
   <%# </div> %>
-
-</div>
+<%# </div> %>
