--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -1,10 +1,5 @@
-<div class="container">
-<h3 class="pt-2 text-center mb-0 pb-0">SAFE LOCATIONS</h3>
-</div>
-<div style="width: 100%; height: 80vh;"
-  data-controller="map"
-  data-map-markers-value="<%= @markers.to_json %>"
-  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+<div class=>
+<%= render "map" %>
 </div>
 
 <p class="d-none my-target"><%= session[:status] %></p>
