--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <p class="d-none my-target"><%= session[:status] %></p>
 <div class="center" data-controller="activation-button">
     <div class="intro">
-    <%= image_tag "logo-ghs.png", class: "home" %>
+    <%# <%= image_tag "logo-ghs.png", class: "home" %>
       <p class="pfade"><strong>WALKING HOME WITH YOU</strong></p>
     </div>
   <div class="main-avatar">
