--- a/app/views/pages/my_profile.html.erb
+++ b/app/views/pages/my_profile.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="details-profile">
-    <p>MY PROFILE</p>
+    <h3>MY PROFILE</h3>
     <% if current_user.photo.attached? %>
       <%= cl_image_tag current_user.photo.key, class: "rounded-circle picture opacity-100"%>
     <% else %>
