--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,8 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: $light-gray;
+  background: #eeeded;
   height: 10vh;
-  border-bottom: 0.5px solid #6C27FF;
+
 }
 
 .navbar-lewagon .navbar-collapse {
