--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,6 +1,11 @@
 .alert {
   position: fixed;
-  bottom: 16px;
-  right: 16px;
+  bottom: 9vh;
+  font-family: $body-font;
+  text-align:center;
   z-index: 1000;
+  background-color: $off-white;
+  opacity: 0.7;
+  color: $purple;
+  border: 2px solid $dark-gray;
 }
