--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,6 +11,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 40px;
+  margin-left: 30px;
 
   a {
     text-decoration: none;
