--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -4,7 +4,7 @@
     <% if message.user.photo.attached? %>
         <%= cl_image_tag message.user.photo.key, class: "messagephoto"%>
         <% else %>
-        <%= image_tag "https://www.filosofie.nl/app/uploads//2020/06/camus-filosoof.jpg", class: "messagephoto" %>
+        <%= image_tag "avatar.jpg", class: "messagephoto" %>
       <% end %>
     <%= message.user.first_name.capitalize %></strong>
     <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
