--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,14 +11,14 @@
         <% if current_user.photo.attached? %>
           <%= cl_image_tag current_user.photo.key, class: "picture rounded-circle avatar-active", data: { activation_button_target: "image" }%>
         <% else %>
-          <%= image_tag "https://www.filosofie.nl/app/uploads//2020/06/camus-filosoof.jpg", class: "picture rounded-circle avatar-active", data: { activation_button_target: "image" } %>
+          <%= image_tag "avatar.jpg", class: "picture rounded-circle avatar-active", data: { activation_button_target: "image" } %>
         <% end %>
 
       <% else %>
         <% if current_user.photo.attached? %>
           <%= cl_image_tag current_user.photo.key, class: "picture rounded-circle", data: { activation_button_target: "image" }%>
         <% else %>
-          <%= image_tag "https://www.filosofie.nl/app/uploads//2020/06/camus-filosoof.jpg", class: "picture rounded-circle", data: { activation_button_target: "image" } %>
+          <%= image_tag "avatar.jpg", class: "picture rounded-circle", data: { activation_button_target: "image" } %>
         <% end %>
       <% end %>
 
@@ -37,7 +37,7 @@
     <% if friend.user.photo.attached? %>
         <%= cl_image_tag friend.user.photo.key, class: "rounded-circle image mb-3"%>
         <% else %>
-        <%= image_tag "https://www.filosofie.nl/app/uploads//2020/06/camus-filosoof.jpg", class: "rounded-circle image mb-3" %>
+        <%= image_tag "avatar.jpg", class: "rounded-circle image mb-3" %>
       <% end %>
     <% end %>
   <% end %>
