--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -3,7 +3,7 @@
     <% if @user.photo.attached? %>
       <%= cl_image_tag @user.photo.key, class: "rounded-circle img"%>
       <% else %>
-      <%= image_tag "https://www.filosofie.nl/app/uploads//2020/06/camus-filosoof.jpg", class: "rounded-circle img" %>
+      <%= image_tag "avatar.jpg", class: "rounded-circle img" %>
     <% end %>
     <div class="name text-danger">
       <%= @user.first_name.upcase %> <%= @user.last_name.upcase %>
