--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 10vh;
+  height: 8vh;
   width: 100vw;
   position: fixed;
   bottom: 0;
@@ -27,8 +27,6 @@
   font-size: 30px;
 }
 
-
-
 .footer p {
   margin: 0;
 }
@@ -48,7 +46,8 @@
 .helpbutton {
 font-size: 32px;
 font-weight: 300;
-padding: 10px 50px;
+height: 100%;
+padding: 0px 10vw;
 background-color: $lilac;
 color: white;
 border: 2px solid red;
@@ -57,5 +56,12 @@ border-radius: 5px;
 &:hover {
   background-color: red;
 }
+}
 
+#map-icon {
+  height: 30px;
+}
+
+#friend-icon {
+  height: 25px;
 }
