add app name to navbar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="center" data-controller="activation-button">
     <div class="intro">
     <%# <%= image_tag "logo-ghs.png", class: "home" %>
-      <p style="font-size: 20px;">WALKING HOME WITH YOU</p>
+      <p>WALKING HOME WITH YOU</p>
     </div>
   <div class="main-avatar">
     <div class="activate" data-action="click->activation-button#change">
