--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -25,9 +25,9 @@
 
 .intro {
   text-align: center;
-  font-size: 15px;
+  font-size: 1rem;
   font-weight: 300;
-  color: $green;
+  color: $dark-gray;
 }
 
 .image {
