--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,9 @@
     <% end %>
 
 
-
+    <div>
+      <p class="app-name">GET HOME SAFE</p>
+    </div>
 
     <%# <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -19,7 +21,7 @@
           <div class="nav-item dropdown">
             <a class="nav-link text-black" href="#" data-bs-toggle="dropdown">
 
-             <%= current_user.first_name.upcase%>
+            <%= current_user.first_name.upcase%>
             </a>
 
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
