--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: $light-gray;
+  background: $off-white;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -7,7 +7,8 @@
   width: 100vw;
   position: fixed;
   bottom: 0;
-  border-top: 0.5px solid $purple;
+  box-shadow: -3px -3px 5px $light-gray;
+  // border-top: 0.5px solid $purple;
 }
 .footer-links {
   display: flex;
@@ -48,9 +49,9 @@ font-size: 32px;
 font-weight: 300;
 height: 100%;
 padding: 0px 10vw;
-background-color: $lilac;
+background-color: rgb(255, 203, 203);
 color: white;
-border: 2px solid red;
+border: 1px solid red;
 border-radius: 5px;
 
 &:hover {
