small fixes and cleaning up code

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,7 +29,7 @@
 
   <div class="friend-avatar flex-container">
     <div>
-    <div class="text-black font-weight-bold username">
+    <div class="intro">
       <p>KEEP IN TOUCH</p>
     </div>
     <% current_user.friends.each do |friend| %>
