--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
 .center {
-  padding-top: 70px;
+  padding-top: 7vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -18,11 +18,9 @@
   }
 }
 
-
-
 .username {
   text-align: center;
-  font-size: 15px;
+  font-size: 1rem;
 }
 
 .intro {
@@ -52,11 +50,6 @@
   width: 100vw;
   height: 250px;
 }
-
-.icon-modal {
-  font-size: 3rem;
-}
-
 
 #my-map {
   .mapboxgl-canvas {
